// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _accessKey="V" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _alert=true 1`] = `
<kol-input-number _alert="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _disabled=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled" disabled="" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _hint="Hint" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-button-wc _hidelabel="" _icons="kolicon-alert-info" _label="Hint" buttonvariant="ghost" class="kol-form-field__hint-button"></kol-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-describedby="input-number-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-number-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-number _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-describedby="input-number-error-nonce" aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-describedby="input-number-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _readOnly=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--read-only kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--readonly" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="number">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _shortKey="S" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _accessKey="V" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _alert=true 1`] = `
<kol-input-number _alert="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _disabled=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled" disabled="" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _hint="Hint" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-button-wc _hidelabel="" _icons="kolicon-alert-info" _label="Hint" buttonvariant="ghost" class="kol-form-field__hint-button"></kol-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-describedby="input-number-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-number-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-number _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-describedby="input-number-error-nonce" aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-describedby="input-number-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _readOnly=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--read-only kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--readonly" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _shortKey="S" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _touched=true 1`] = `
<kol-input-number _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--touched kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" list="input-number-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
            <datalist id="input-number-list-nonce">
              <option value="1"></option>
              <option value="2"></option>
              <option value="3"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _touched=true 1`] = `
<kol-input-number _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--touched kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-number number">
      <label class="kol-form-field__label" htmlfor="input-number-nonce" id="input-number-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-down" data-testid="kol-input-number-step-down" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-minus" role="presentation"></i>
            </button>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-number-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="number">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <button aria-hidden="true" class="kol-input-container__smart-button kol-input-number__step-button kol-input-number__step-button-up" data-testid="kol-input-number-step-up" tabindex="-1" type="button">
              <i aria-hidden="true" class="kol-icon kol-icon__icon kolicon-plus" role="presentation"></i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;
